2004-05-02  Richard Hult  <richard@imendio.com>

	* drw-monitor.c Raise the threshold for detecting activity, makes
	totem not trigger typing breaks. Fixes bug #121876.

2004-04-15  Jody Goldberg <jody@gnome.org>

	* Release 2.6.1

2004-04-01  Jody Goldberg <jody@gnome.org>

	* Release 2.6.0.3

2004-03-30  Jody Goldberg <jody@gnome.org>

	* Release 2.6.0.1

2004-03-23  Jody Goldberg <jody@gnome.org>

	* Release 2.6.0

2004-03-11  Jody Goldberg <jody@gnome.org>

	* Release 2.5.4

2004-02-17  Richard Hult  <richard@imendio.com>

	* drw-break-window.c (drw_break_window_init): Don't make the
	postpone button focused right away, makes the fix for #126179 a
	lot better.

	* drwright.c: Don't create break window if we already have one,
	fixes bug #134455. Don't make about box modal, fixes bug #134594.

	* main.c (main): Remove unused variable.

2004-02-13  Jody Goldberg <jody@gnome.org>

	* Release 2.5.3

2004-02-01  Richard Hult  <richard@imendio.com>

	Fixes bug #126179:
	
	* drw-break-window.c (drw_break_window_init): Add mnemonic to
	postpone button.

	* drwright.c (maybe_change_state): Grab keyboard so the mnemonic
	actually works.

2004-01-14  Jody Goldberg <jody@gnome.org>

	* Release 2.5.2

2003-12-30  Jody Goldberg <jody@gnome.org>

	* Release 2.5.1.1

2003-12-30  Jody Goldberg <jody@gnome.org>

	* Release 2.5.1

2003-10-28  Jody Goldberg <jody@gnome.org>

	* Release 2.5.0

2003-09-30  Danilo Šegan  <dsegan@gmx.net>

	* drwright.c (update_tooltip): Use ngettext for plural-forms,
	fixes bug #117997. 

2003-08-24  Richard Hult  <richard@imendio.com>

	* Makefile.am:
	* drw-break-window.c:
	* drwright.c: Multihead support, fixes bug #119827.

Thu Jul 31 17:41:45 2003  Jonathan Blandford  <jrb@redhat.com>

	* drwright.c (popup_preferences_cb): add properties dialog,
	#118323

Thu Jul 31 14:56:41 2003  Jonathan Blandford  <jrb@redhat.com>

	* drwright.c (popup_quit_cb): remove bogus popup_quit code.

Thu Jul 31 14:56:13 2003  Jonathan Blandford  <jrb@redhat.com>
