@@ -1,3 +1,10 @@
+2004-07-28  Richard Hult  <richard@imendio.com>
+
+	* drw-break-window.c: Patch from Markus Berg <mberg@hp.com> to fix
+	bug #123141.
+
+	* drwright.c: Remove some cruft. Shorten the warning period a bit.
+
 2004-05-02  Richard Hult  <richard@imendio.com>
 
 	* drw-monitor.c Raise the threshold for detecting activity, makes
